--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Spectral by HTML5 UP</title>
+		<title>Antony Ménard Portofolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,18 +19,16 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Spectral</a></h1>
+						<h1><a href="index.html">Antony Ménard</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
-											<li><a href="elements.html">Elements</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+											<li><a href="index.html">Front Page</a></li>
+											<li><a href="portfolio.html">Portfolio</a></li>
+											<li><a href="cv.html">CV</a></li>
 										</ul>
 									</div>
 								</li>
@@ -42,12 +40,9 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Antony Ménard Portofolio</h2>
-							<p>Another fine responsive<br />
-							site template freebie<br />
-							crafted by <a href="http://html5up.net">HTML5 UP</a>.</p>
-							<ul class="actions special">
-								<li><a href="#" class="button primary">Activate</a></li>
-							</ul>
+							<p>Projects showcase and<br />
+								CV informations
+							</p>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
 					</section>
@@ -56,40 +51,39 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>About me</h2>
+								<p>I am hardworking, and I like new challenges which tests the limits of my competence.<br />
+									 I am eager to learn and help others when I'm able to.<br />
+									 I have completed my Bachelor's degree in Video Game Development and I am currently looking for a job.
+								</p>
 							</header>
-							<ul class="icons major">
-								<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
-								<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
-								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
-							</ul>
 						</div>
 					</section>
 
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
+							<div class="image"><img src="images/coming_soon.jpg" alt="" /></div><div class="content">
+								<h2>How Do You Like Them Apples (Ongoing)</h2>
+								<p>Rogue-Doom-like. A match up between Doom Eternal's character movements and RoboQuest's game loop. </p>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/be_bold.jpg" alt="" /></div><div class="content">
+								<h2>Be Bold!</h2>
+								<p>Auto-runner with a synthwave esthetic. Jump and shoot through the levels</p>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/echo.jpg" alt="" /></div><div class="content">
+								<h2>Echo</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-							</div>
-						</section>
-						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/golden_nic.jpg" alt="" /></div><div class="content">
+								<h2>Golden Nic</h2>
+								<p>A birthday present I made for a friend. Slot machine with a meme theme</p>
 							</div>
 						</section>
 					</section>
@@ -98,9 +92,8 @@
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Accumsan mus tortor nunc aliquet</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>Here are some informations about my competences</h2>
+								<p>To see everything that I can do, check out <a href="cv.html">my CV</a>
 							</header>
 							<ul class="features">
 								<li class="icon fa-paper-plane">
