--- a/index.html
+++ b/index.html
@@ -65,25 +65,25 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/coming_soon.jpg" alt="" /></div><div class="content">
 								<h2>How Do You Like Them Apples (Ongoing)</h2>
-								<p>Rogue-Doom-like. A match up between Doom Eternal's character movements and RoboQuest's game loop. </p>
+								<p>A personnal project in the form of a Rogue-Doom-like. A match up between Doom Eternal's character movements and RoboQuest's game loop. </p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/be_bold.jpg" alt="" /></div><div class="content">
 								<h2>Be Bold!</h2>
-								<p>Auto-runner with a synthwave esthetic. Jump and shoot through the levels</p>
+								<p>An auto-runner with a synthwave esthetic. Jump and shoot to complete the levels</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/echo.jpg" alt="" /></div><div class="content">
 								<h2>Echo</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<p>A narrative driven-game with a bit of stealth made in a multidisciplinary team. This serious game teaches you about the concept of Echo chamber</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/golden_nic.jpg" alt="" /></div><div class="content">
 								<h2>Golden Nic</h2>
-								<p>A birthday present I made for a friend. Slot machine with a meme theme</p>
+								<p>A slot machine with a meme theme. this is only birthday present I made for a friend</p>
 							</div>
 						</section>
 					</section>
@@ -97,28 +97,34 @@
 							</header>
 							<ul class="features">
 								<li class="icon fa-paper-plane">
-									<h3>Arcu accumsan</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Diploma</h3>
+									<p>Bachelor's degree in video game Development, UQAC, 2022 <br><br>
+										DEC in programming, video game option, Cégep de Ste-Foy, 2020
+									</p>
 								</li>
 								<li class="icon solid fa-laptop">
-									<h3>Ac Augue Eget</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Competences</h3>
+									<p>Languages: C++/C# <br><br>
+										Platform: Unreal Engine 4, Unity, Git, Perforce <br><br>
+									</p>
 								</li>
 								<li class="icon solid fa-code">
-									<h3>Mus Scelerisque</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Work Experiences</h3>
+									<p>
+										Mobile App Developper - Bi Expertise <br><br>
+										Intership - Beneva
+									</p>
 								</li>
 								<li class="icon solid fa-headphones-alt">
-									<h3>Mauris Imperdiet</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-heart">
-									<h3>Aenean Primis</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Distinctions</h3>
+									<p>
+										2 University Scholarships
+										Prize winner at HackQC 2019
+									</p>
 								</li>
 								<li class="icon fa-flag">
-									<h3>Tortor Ut</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Languages</h3>
+									<p>French and English (Spoken, Read, Written)</p>
 								</li>
 							</ul>
 						</div>
