--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Antony Ménard Portofolio</h2>
-							<p>Projects showcase and<br />
-								CV informations
+							<p>Projects showcase and CV
 							</p>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
@@ -52,9 +51,10 @@
 						<div class="inner">
 							<header class="major">
 								<h2>About me</h2>
-								<p>I am hardworking, and I like new challenges which tests the limits of my competence.<br />
-									 I am eager to learn and help others when I'm able to.<br />
-									 I have completed my Bachelor's degree in Video Game Development and I am currently looking for a job.
+								<p>I am hardworking, and I like new challenges where I can test my limits and skills.<br />
+									 I am eager to learn and help my teammates or colleagues whenever I can.<br />
+									 I have completed my Bachelor's degree in Video Game Development<br />
+									 and I am currently looking for a job in the video game industry.
 								</p>
 							</header>
 						</div>
@@ -77,7 +77,7 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/echo.jpg" alt="" /></div><div class="content">
 								<h2>Echo</h2>
-								<p>A narrative driven-game with a bit of stealth made in a multidisciplinary team. This serious game teaches you about the concept of Echo chamber</p>
+								<p>A narrative driven-game with a bit of stealth made in a multidisciplinary team. This serious game teaches you about the concept of an echo chamber</p>
 							</div>
 						</section>
 						<section class="spotlight">
@@ -93,13 +93,13 @@
 						<div class="inner">
 							<header class="major">
 								<h2>Here are some informations about my competences</h2>
-								<p>To see everything that I can do, check out <a href="cv.html">my CV</a>
+								<p>To see everything that I can do, <a href="cv.html">see detailed CV</a>
 							</header>
 							<ul class="features">
 								<li class="icon fa-paper-plane">
 									<h3>Diploma</h3>
-									<p>Bachelor's degree in video game Development, UQAC, 2022 <br><br>
-										DEC in programming, video game option, Cégep de Ste-Foy, 2020
+									<p>Bachelor's degree in Video Game Development, Université du QUébec à Chicoutimi (UQAC), 2022 <br><br>
+										College degree (DEC) in programming, video game option, Cégep de Ste-Foy, 2020
 									</p>
 								</li>
 								<li class="icon solid fa-laptop">
@@ -118,7 +118,7 @@
 								<li class="icon solid fa-headphones-alt">
 									<h3>Distinctions</h3>
 									<p>
-										2 University Scholarships
+										2 University Scholarships <br>
 										Prize winner at HackQC 2019
 									</p>
 								</li>
