--- a/cv.html
+++ b/cv.html
@@ -39,8 +39,8 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<h2>Curriculum Vatæ</h2>
-							<p>Everyting to know about me is right here!</p>
+							<h2>Curriculum Vitæ</h2>
+							<p>Everyting you need to know about me is right here!</p>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
@@ -56,40 +56,38 @@
 										<li>Languages: C++/C#, Java, SQL, PHP, HTML 5, CSS 3, Javascript, NodeJS, ReactJS, Kotlin</li>
 										<li>Platform: Unreal Engine 4, Unity, Git, Perforce, Android Studio</li>
 										<li>Certifications: Azure Fundamentals (AZ-900)</li>
-										<li>Autres: Agile/Kanban Methods</li>
+										<li>Others: Agile/Kanban Methods</li>
 									</ul>
 									<hr />
 									<h4>Work Experiences</h4>
 									<ul>
 										<li>Mobile App Developper - Bi Expertise
-											<p> May 2021 - Aug 2021, Aug 2022-Now <br>
-												-Explore solutions to conceptualize 3D models using photogrammetry. <br>
-												-Search for new technologies and usefull concepts for the projet at hand. <br>
-												-Learn new skills about Azure Essentials and Blender. <br>
-												-Collaborate with other programmers, analyse constraints and suggest technics for different features. <br>
+											<p> May 2021 - August 2021 and August 2022-Now <br>
+												-Explore solutions to conceptualize 3D models using photogrammetry<br>
+												-Search for new technologies and useful concepts for the projet at hand<br>
+												-Stay up to date with new technologies and learn new skills about Azure Essentials and Blender<br>
+												-Collaborate with other programmers, analyse constraints and suggest appropriate concepts for different features<br>
 											</p>
 										</li>
 										<li>Student Staff - Beneva
-											<p>Mar 2020 - Aug 2020 <br>
-												-Analyze existing features and, if need be, define new solutions to the needs of systems. <br>
-												-Automatize the companie's mobile app build. <br>
-												-Use GitHub Actions. <br>
-											</p>
+											<p>March 2020 - August 2020 <br>
+												-Analyze existing features and, if need be, define new solutions to the needs of systems<br>
+												-Automate the Beneva's mobile app build with HitHub Actions<br>											</p>
 										</li>
 										<li>Internship - Beneva
-											<p>May 2019 - Aug 2019 <br>
-												-Automating of interface testing on mobile app. <br>
-												-Web site developping to spread the use of tests by others developpers. <br>
-												-Research for new technologies and sofware to adapt the tests on both Android and IOS <br>
+											<p>May 2019 - August 2019 <br>
+												-Automating of interface testing on mobile app<br>
+												-Developping a web site to spread the use of tests by others developpers<br>
+												-Research for new technologies and sofware to adapt the tests on both Android and IOS<br>
 											</p>
 										</li>
 									</ul>
 									<hr />
 									<h4>Distinctions</h4>
 									<ul>
-										<li>Scholarship of UQAC Fondation</li>
-										<li>Third prize at HackQC 2019 (Create an app towards the interest of Quebec's citizen, using data from municipalities associated with the event.)</li>
-										<li>Scholarship of Glendon University for English immersion (Explore program), Toronto</li>
+										<li>2 Excellence scholarship of UQAC Foundation (2020, 2022)</li>
+										<li>Third prize at HackQC 2019 (Create an app to identify nearby electric car charging stations and the touristic attractions near them)</li>
+										<li>Scholarship of Glendon University for an English immersion (Explore program), Toronto</li>
 									</ul>
 									<hr />
 									<h4>Languages</h4>
