--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<script src="https://kit.fontawesome.com/99404e3741.js" crossorigin="anonymous"></script>
 	</head>
 	<body class="landing is-preload">
 
@@ -96,50 +97,36 @@
 								<p>To see everything that I can do, <a href="cv.html">see detailed CV</a>
 							</header>
 							<ul class="features">
-								<li class="icon fa-paper-plane">
+								<li class="icon solid fa-user-graduate">
 									<h3>Diploma</h3>
 									<p>Bachelor's degree in Video Game Development, Université du QUébec à Chicoutimi (UQAC), 2022 <br><br>
 										College degree (DEC) in programming, video game option, Cégep de Ste-Foy, 2020
 									</p>
 								</li>
-								<li class="icon solid fa-laptop">
+								<li class="icon solid fa-laptop-code">
 									<h3>Competences</h3>
 									<p>Languages: C++/C# <br><br>
 										Platform: Unreal Engine 4, Unity, Git, Perforce <br><br>
 									</p>
 								</li>
-								<li class="icon solid fa-code">
+								<li class="icon solid fa-briefcase">
 									<h3>Work Experiences</h3>
 									<p>
 										Mobile App Developper - Bi Expertise <br><br>
 										Intership - Beneva
 									</p>
 								</li>
-								<li class="icon solid fa-headphones-alt">
+								<li class="icon solid fa-award">
 									<h3>Distinctions</h3>
 									<p>
-										2 University Scholarships <br>
+										2 Excellence University Scholarships <br>
 										Prize winner at HackQC 2019
 									</p>
 								</li>
-								<li class="icon fa-flag">
+								<li class="icon solid fa-comment-dots">
 									<h3>Languages</h3>
 									<p>French and English (Spoken, Read, Written)</p>
 								</li>
-							</ul>
-						</div>
-					</section>
-
-				<!-- CTA -->
-					<section id="cta" class="wrapper style4">
-						<div class="inner">
-							<header>
-								<h2>Arcue ut vel commodo</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
-							</header>
-							<ul class="actions stacked">
-								<li><a href="#" class="button fit primary">Activate</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li>
 							</ul>
 						</div>
 					</section>
