--- a/index.html
+++ b/index.html
@@ -64,9 +64,18 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/coming_soon.jpg" alt="" /></div><div class="content">
-								<h2>How Do You Like Them Apples (Ongoing)</h2>
-								<p>A personnal project in the form of a Rogue-Doom-like. A match up between Doom Eternal's character movements and RoboQuest's game loop. </p>
+							<div class="image"><img src="images/up_we_go.png" alt="" /></div><div class="content">
+								<h2>Up We Go</h2>
+								<p>A 3D platformer that you can play online with up to 8 players.
+									Grab and roll your way through the level to reach the giant tree.<br>
+								</p>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/echo.jpg" alt="" /></div><div class="content">
+								<h2>Echo</h2>
+								<p>A narrative driven-game with a bit of stealth made in a multidisciplinary team.
+									 This serious game teaches you about the concept of an echo chamber</p>
 							</div>
 						</section>
 						<section class="spotlight">
@@ -76,9 +85,23 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/echo.jpg" alt="" /></div><div class="content">
-								<h2>Echo</h2>
-								<p>A narrative driven-game with a bit of stealth made in a multidisciplinary team. This serious game teaches you about the concept of an echo chamber</p>
+							<div class="image"><img src="images/coming_soon.jpg" alt="" /></div><div class="content">
+								<h2>How Do You Like Them Apples (Ongoing)</h2>
+								<p>A personnal project in the form of a Rogue-Doom-like. 
+									A match up between Doom Eternal's character movements and RoboQuest's game loop. </p>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/resistance_is_futile.png" alt="" /></div><div class="content">
+								<h2>Resistance is futile</h2>
+								<p>A turn-by-turn game with rpg mechanics. Fight and loot enemies until death</p>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/excess_mana.png" alt="" /></div><div class="content">
+								<h2>Excess Mana</h2>
+								<p>A top-down tower-defense with a bit of exploration. 
+									Switch between elemental powers to fights slimes</p>
 							</div>
 						</section>
 						<section class="spotlight">
@@ -134,10 +157,9 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
+							<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="#" class="icon brands fa-gitlab"><span class="label">GitLab</span></a></li>
 							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
