new portfolio pages

--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
 	</head>
 	<body class="landing is-preload">
 
-		<!-- Page Wrapper -->
 			<div id="page-wrapper">
 
-				<!-- Header -->
 					<header id="header" class="alt">
 						<h1><a href="index.html">Antony Ménard</a></h1>
 						<nav id="nav">
@@ -28,7 +26,13 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Front Page</a></li>
-											<li><a href="portfolio.html">Portfolio</a></li>
+											<li><a href="upWeGo.html">Up We Go</a></li>
+											<li><a href="echo.html">Echo</a></li>
+											<li><a href="beBold.html">Be Bold</a></li>
+											<li><a href="resistanceIsFutile.html">Resistance Is Futile</a></li>
+											<li><a href="excessMana.html">Excess Mana</a></li>
+											<li><a href="goldenNic.html">Golden Nic</a></li>
+											<li><a href="howDoYouLikeThemApples.html">How Do You Like Them Apples</a></li>
 											<li><a href="cv.html">CV</a></li>
 										</ul>
 									</div>
@@ -37,7 +41,6 @@
 						</nav>
 					</header>
 
-				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
 							<h2>Antony Ménard Portofolio</h2>
@@ -47,7 +50,6 @@
 						<a href="#one" class="more scrolly">Learn More</a>
 					</section>
 
-				<!-- One -->
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
@@ -61,7 +63,6 @@
 						</div>
 					</section>
 
-				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image"><img src="images/up_we_go.png" alt="" /></div><div class="content">
@@ -112,7 +113,6 @@
 						</section>
 					</section>
 
-				<!-- Three -->
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
@@ -154,12 +154,11 @@
 						</div>
 					</section>
 
-				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="#" class="icon brands fa-gitlab"><span class="label">GitLab</span></a></li>
+							<li><a href="https://www.linkedin.com/in/antony-m%C3%A9nard-923083182/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://github.com/AntonyMenard" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://gitlab.com/AntonyMenard604" class="icon brands fa-gitlab"><span class="label">GitLab</span></a></li>
 							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
@@ -169,7 +168,6 @@
 
 			</div>
 
-		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
