--- a/beBold.html
+++ b/beBold.html
@@ -27,7 +27,13 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Front Page</a></li>
-											<li><a href="portfolio.html">Portfolio</a></li>
+											<li><a href="upWeGo.html">Up We Go</a></li>
+											<li><a href="echo.html">Echo</a></li>
+											<li><a href="beBold.html">Be Bold</a></li>
+											<li><a href="resistanceIsFutile.html">Resistance Is Futile</a></li>
+											<li><a href="excessMana.html">Excess Mana</a></li>
+											<li><a href="goldenNic.html">Golden Nic</a></li>
+											<li><a href="howDoYouLikeThemApples.html">How Do You Like Them Apples</a></li>
 											<li><a href="cv.html">CV</a></li>
 										</ul>
 									</div>
