--- a/resistanceIsFutile.html
+++ b/resistanceIsFutile.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Antony Ménard CV</title>
+		<title>Antony Ménard Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -45,63 +45,24 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<h2>Curriculum Vitæ</h2>
-							<p>Everyting you need to know about me is right here!</p>
+							<h2>Portfolio</h2>
+							<p>A more detailed view of all the projects i've worked on</p>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
-								<section>
-									<h4>Diploma</h4>
-									<ul>
-										<li>Bachelor's degree in video game Development, UQAC, 2022</li>
-										<li>DEC in programming, video game option, Cégep de Ste-Foy, 2020</li>
-									</ul>
-									<hr />
-									<h4>Competences</h4>
-									<ul>
-										<li>Languages: C++/C#, Java, SQL, PHP, HTML 5, CSS 3, Javascript, NodeJS, ReactJS, Kotlin</li>
-										<li>Platform: Unreal Engine 4, Unity, Git, Perforce, Android Studio</li>
-										<li>Certifications: Azure Fundamentals (AZ-900)</li>
-										<li>Others: Agile/Kanban Methods</li>
-									</ul>
-									<hr />
-									<h4>Work Experiences</h4>
-									<ul>
-										<li>Mobile App Developper - Bi Expertise
-											<p> May 2021 - August 2021 and August 2022-Now <br>
-												-Explore solutions to conceptualize 3D models using photogrammetry<br>
-												-Search for new technologies and useful concepts for the projet at hand<br>
-												-Stay up to date with new technologies and learn new skills about Azure Essentials and Blender<br>
-												-Collaborate with other programmers, analyse constraints and suggest appropriate concepts for different features<br>
-											</p>
-										</li>
-										<li>Student Staff - Beneva
-											<p>March 2020 - August 2020 <br>
-												-Analyze existing features and, if need be, define new solutions to the needs of systems<br>
-												-Automate the Beneva's mobile app build with HitHub Actions<br>											</p>
-										</li>
-										<li>Internship - Beneva
-											<p>May 2019 - August 2019 <br>
-												-Automating of interface testing on mobile app<br>
-												-Developping a web site to spread the use of tests by others developpers<br>
-												-Research for new technologies and sofware to adapt the tests on both Android and IOS<br>
-											</p>
-										</li>
-									</ul>
-									<hr />
-									<h4>Distinctions</h4>
-									<ul>
-										<li>2 Excellence scholarship of UQAC Foundation (2020, 2022)</li>
-										<li>Third prize at HackQC 2019 (Create an app to identify nearby electric car charging stations and the touristic attractions near them)</li>
-										<li>Scholarship of Glendon University for an English immersion (Explore program), Toronto</li>
-									</ul>
-									<hr />
-									<h4>Languages</h4>
-									<ul>
-										<li>French and English (Spoken, Read, Written)</li>
-									</ul>
-									<hr />
-								</section>
+
+								<h3>Lorem ipsum dolor</h3>
+								<p>Morbi mattis mi consectetur tortor elementum, varius pellentesque velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac scelerisque ipsum tempor. Duis vulputate ex et ex tincidunt, quis lacinia velit aliquet. Duis non efficitur nisi, id malesuada justo. Maecenas sagittis felis ac sagittis semper. Curabitur purus leo, tempus sed finibus eget, fringilla quis risus. Maecenas et lorem quis sem varius sagittis et a est. Maecenas iaculis iaculis sem. Donec vel dolor at arcu tincidunt bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce ut aliquet justo. Donec id neque ipsum. Integer eget ultricies odio. Nam vel ex a orci fringilla tincidunt. Aliquam eleifend ligula non velit accumsan cursus. Etiam ut gravida sapien.</p>
+
+								<p>Vestibulum ultrices risus velit, sit amet blandit massa auctor sit amet. Sed eu lectus sem. Phasellus in odio at ipsum porttitor mollis id vel diam. Praesent sit amet posuere risus, eu faucibus lectus. Vivamus ex ligula, tempus pulvinar ipsum in, auctor porta quam. Proin nec dui cursus, posuere dui eget interdum. Fusce lectus magna, sagittis at facilisis vitae, pellentesque at etiam. Quisque posuere leo quis sem commodo, vel scelerisque nisi scelerisque. Suspendisse id quam vel tortor tincidunt suscipit. Nullam auctor orci eu dolor consectetur, interdum ullamcorper ante tincidunt. Mauris felis nec felis elementum varius.</p>
+
+								<hr />
+
+								<h4>Feugiat aliquam</h4>
+								<p>Nam sapien ante, varius in pulvinar vitae, rhoncus id massa. Donec varius ex in mauris ornare, eget euismod urna egestas. Etiam lacinia tempor ipsum, sodales porttitor justo. Aliquam dolor quam, semper in tortor eu, volutpat efficitur quam. Fusce nec fermentum nisl. Aenean erat diam, tempus aliquet erat.</p>
+
+								<p>Etiam iaculis nulla ipsum, et pharetra libero rhoncus ut. Phasellus rutrum cursus velit, eget condimentum nunc blandit vel. In at pulvinar lectus. Morbi diam ante, vulputate et imperdiet eget, fermentum non dolor. Ut eleifend sagittis tincidunt. Sed viverra commodo mi, ac rhoncus justo. Duis neque ligula, elementum ut enim vel, posuere finibus justo. Vivamus facilisis maximus nibh quis pulvinar. Quisque hendrerit in ipsum id tellus facilisis fermentum. Proin mauris dui, at vestibulum sit amet, auctor bibendum neque.</p>
+
 							</div>
 						</section>
 					</article>
