--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 						<li><a href="https://www.linkedin.com/in/antony-m%C3%A9nard-923083182/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/AntonyMenard" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						<li><a href="https://gitlab.com/AntonyMenard604" class="icon brands fa-gitlab"><span class="label">GitLab</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="mailto:antonymenard@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
