be bold/echo v1

--- a/echo.html
+++ b/echo.html
@@ -60,7 +60,13 @@
 
 								<h3>Development</h3>
 								<p>
-									this is a Development
+									This is an interesting project was done with a multidisciplinary team composed of programmers and
+									artists (2D, 3D and musicians) while I was at university. After picking a serious subject to make a game, 
+									which ended up being the concept of echo chamber, we tested 3 game designs to see which one
+									conveyed the message the best, the best one being a narative-driven game that ended up being Echo. 
+									It was very interesting to see how the two professions saw the project in completly 
+									different ways. We made two weekly meetings to keep track of what was being done by each one and 
+									had game designer from Ubisoft Saguenay look at our concepts to help us.
 								</p>
 
 							</div>
