--- a/beBold.html
+++ b/beBold.html
@@ -53,14 +53,23 @@
 
 								<h3>Gameplay</h3>
 								<p>
-									This is a game
+									*Insert video here*
+									<br><br>
+									As the character moves throught the level, the player needs to shoot at obstacles and jump above
+									deadly pits to reah the end. 
 								</p>
 
 								<hr />
 
 								<h3>Development</h3>
 								<p>
-									this is a Development
+									I worked on this game has a Synthesis projet for my College Degree. In a team of three, we thought 
+									of a game concept and developed it in 15 weeks, divided in conception phase, and bronze, silver 
+									and gold phase. We followed Agile methods and practised SCRUM meetings daily. We also made 
+									weekly review of the game's progress to talk about what went wrong and what was done right. 
+									In addition to our teacher reviewing our work, mentors from the game industry came on several 
+									occasions to give advices development and gameplay-wise. A friend of mine joined the team near
+									the end to create the incredible music of the game.
 								</p>
 
 							</div>
