--- a/fr/index.html
+++ b/fr/index.html
@@ -27,7 +27,7 @@
 								<a href="#menu" class="menuToggle"><span>Menu</span></a>
 								<div id="menu">
 									<ul>
-										<li><a href="index.html">Front Page</a></li>
+										<li><a href="index.html">Page principale</a></li>
 										<li><a href="upWeGo.html">Up We Go</a></li>
 										<li><a href="echo.html">Echo</a></li>
 										<li><a href="beBold.html">Be Bold</a></li>
@@ -47,20 +47,19 @@
 				<section id="banner">
 					<div class="inner">
 						<h2>Antony Ménard Portofolio</h2>
-						<p>Projects showcase and CV
-						</p>
+						<p>Présentation des projets et CV</p>
 					</div>
-					<a href="#one" class="more scrolly">Learn More</a>
+					<a href="#one" class="more scrolly">En savoir plus</a>
 				</section>
 
 				<section id="one" class="wrapper style1 special">
 					<div class="inner">
 						<header class="major">
-							<h2>About me</h2>
-							<p>I am hardworking, and I like new challenges where I can test my limits and skills.<br />
-									I am eager to learn and help my teammates or colleagues whenever I can.<br />
-									I have completed my Bachelor's degree in Video Game Development<br />
-									and I am currently looking for a job in the video game industry.
+							<h2>À propos de moi</h2>
+							<p>Je travaille dur, et j'aime les nouveaux défis où je peux tester mes limites et mes compétences.<br />
+								Je suis impatient d'apprendre et d'aider mes coéquipiers ou mes collègues chaque fois que je le peux.<br />
+								J'ai obtenu mom diplôme en développement de jeux vidéo<br />
+								Et je suis actuellement à la recherche d'un emploi dans l'industrie du jeu vidéo.
 							</p>
 						</header>
 					</div>
@@ -173,13 +172,13 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="../assets/js/jquery.min.js"></script>
+			<script src="../assets/js/jquery.scrollex.min.js"></script>
+			<script src="../assets/js/jquery.scrolly.min.js"></script>
+			<script src="../assets/js/browser.min.js"></script>
+			<script src="../assets/js/breakpoints.min.js"></script>
+			<script src="../assets/js/util.js"></script>
+			<script src="../assets/js/main.js"></script>
 
 	</body>
 </html>
