--- a/fr/index.html
+++ b/fr/index.html
@@ -67,48 +67,48 @@
 
 				<section id="two" class="wrapper alt style2">
 					<section class="spotlight">
-						<div class="image"><img src="images/up_we_go.png" alt="" /></div><div class="content">
+						<div class="image"><img src="../images/up_we_go.png" alt="" /></div><div class="content">
 							<h2>Up We Go</h2>
-							<p>A 3D platformer that you can play online with up to 8 players.
-								Grab and roll your way through the level to reach the giant tree.<br>
+							<p>Un jeu de plateforme 3D que vous pouvez jouer en ligne avec jusqu'à 8 joueurs. 
+								Agripper et roulez dans  le niveau pour atteindre l'arbre géant.<br>
 							</p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/echo.jpg" alt="" /></div><div class="content">
+						<div class="image"><img src="../images/echo.jpg" alt="" /></div><div class="content">
 							<h2>Echo</h2>
-							<p>A narrative driven-game with a bit of stealth made in a multidisciplinary team.
-									This serious game teaches you about the concept of an echo chamber</p>
+							<p>Un jeu narratif avec un peu de furtivité fait dans une équipe multidisciplinaire. 
+								Ce jeu sérieux vous apprend le concept d'une chambre d'écho</p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/be_bold.jpg" alt="" /></div><div class="content">
+						<div class="image"><img src="../images/be_bold.jpg" alt="" /></div><div class="content">
 							<h2>Be Bold!</h2>
-							<p>An auto-runner with a synthwave esthetic. Jump and shoot to complete the levels</p>
+							<p>Auto-runner avec un esthétique synth-wave. Sauter et tirer pour compléter les niveaux</p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/coming_soon.jpg" alt="" /></div><div class="content">
+						<div class="image"><img src="../images/coming_soon.jpg" alt="" /></div><div class="content">
 							<h2>How Do You Like Them Apples (Ongoing)</h2>
-							<p>A personnal project in the form of a Rogue-Doom-like. 
-								A match up between Doom Eternal's character movements and RoboQuest's game loop. </p>
+							<p>Un projet personnel sous la forme d'un Rogue-Doom-like. Un match entre les mouvements des personnages 
+								de Doom Eternal et la boucle de jeu de RoboQuest.</p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/resistance_is_futile.png" alt="" /></div><div class="content">
+						<div class="image"><img src="../images/resistance_is_futile.png" alt="" /></div><div class="content">
 							<h2>Resistance is futile</h2>
-							<p>A turn-by-turn game with rpg mechanics. Fight and loot enemies until death</p>
+							<p>Un tour par tour avec une mécanique rpg. Combattre et piller les ennemis jusqu'à ce que mort s'en suive</p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/excess_mana.png" alt="" /></div><div class="content">
+						<div class="image"><img src="../images/excess_mana.png" alt="" /></div><div class="content">
 							<h2>Excess Mana</h2>
-							<p>A top-down tower-defense with a bit of exploration. 
-								Switch between elemental powers to fights slimes</p>
+							<p>Un tower-defense avec vu du dessus avec un peu d'exploration. 
+								Passez d'un pouvoir élémentaire à l'autre pour lutter contre les slimes</p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/golden_nic.jpg" alt="" /></div><div class="content">
+						<div class="image"><img src="../images/golden_nic.jpg" alt="" /></div><div class="content">
 							<h2>Golden Nic</h2>
 							<p>A slot machine with a meme theme. this is only birthday present I made for a friend</p>
 						</div>
@@ -118,39 +118,39 @@
 				<section id="three" class="wrapper style3 special">
 					<div class="inner">
 						<header class="major">
-							<h2>Here are some informations about my competences</h2>
-							<p>To see everything that I can do, <a href="cv.html">see detailed CV</a>
+							<h2>Voici quelques informations sur mes compétences</h2>
+							<p>Pour voir tout ce que je peux faire, <a href="fr/cv.html">voir mon CV détaillé</a>
 						</header>
 						<ul class="features">
 							<li class="icon solid fa-user-graduate">
-								<h3>Diploma</h3>
-								<p>Bachelor's degree in Video Game Development, Université du QUébec à Chicoutimi (UQAC), 2022 <br><br>
-									College degree (DEC) in programming, video game option, Cégep de Ste-Foy, 2020
+								<h3>Diplômes</h3>
+								<p>BAC en développement de jeux vidéo, Université du Québec à Chicoutimi (UQAC), 2022<br><br>
+									DEC en programmation, option jeu vidéo, Cégep de Ste-Foy, 2020
 								</p>
 							</li>
 							<li class="icon solid fa-laptop-code">
 								<h3>Competences</h3>
-								<p>Languages: C++/C# <br><br>
-									Platform: Unreal Engine 4, Unity, Git, Perforce <br><br>
+								<p>Langages: C++/C# <br><br>
+									Plateforme: Unreal Engine 4, Unity, Git, Perforce <br><br>
 								</p>
 							</li>
 							<li class="icon solid fa-briefcase">
-								<h3>Work Experiences</h3>
+								<h3>Expériences Professionnelles</h3>
 								<p>
-									Mobile App Developper - Bi Expertise <br><br>
-									Intership - Beneva
+									Développeur d'application mobile - Bi Expertise <br><br>
+									Stagiaire - Beneva
 								</p>
 							</li>
 							<li class="icon solid fa-award">
 								<h3>Distinctions</h3>
 								<p>
-									2 Excellence University Scholarships <br>
-									Prize winner at HackQC 2019
+									2 Bourses d'excellence universitaires<br><br>
+									Gagnant d'un prix au HackQC 2019
 								</p>
 							</li>
 							<li class="icon solid fa-comment-dots">
-								<h3>Languages</h3>
-								<p>French and English (Spoken, Read, Written)</p>
+								<h3>Langues</h3>
+								<p>Français et anglais (parlé, lire, écrit)</p>
 							</li>
 						</ul>
 					</div>
