--- a/fr/echo.html
+++ b/fr/echo.html
@@ -26,7 +26,7 @@
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="index.html">Front Page</a></li>
+											<li><a href="index.html">Page principale</a></li>
 											<li><a href="upWeGo.html">Up We Go</a></li>
 											<li><a href="echo.html">Echo</a></li>
 											<li><a href="beBold.html">Be Bold</a></li>
