--- a/fr/cv.html
+++ b/fr/cv.html
@@ -46,59 +46,60 @@
 					<article id="main">
 						<header>
 							<h2>Curriculum Vitæ</h2>
-							<p>Everyting you need to know about me is right here!</p>
+							<p>Tout ce que vous avez besoin de savoir sur moi est ici!</p>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
 								<section>
-									<h4>Diploma</h4>
+									<h4>Diplômes</h4>
 									<ul>
-										<li>Bachelor's degree in video game Development, UQAC, 2022</li>
-										<li>DEC in programming, video game option, Cégep de Ste-Foy, 2020</li>
+										<li>BAC en développement de jeux vidéo, Université du Québec à Chicoutimi (UQAC), 2022</li>
+										<li>DEC en programmation, option jeu vidéo, Cégep de Ste-Foy, 2020</li>
 									</ul>
 									<hr />
-									<h4>Competences</h4>
+									<h4>Compétences</h4>
 									<ul>
-										<li>Languages: C++/C#, Java, SQL, PHP, HTML 5, CSS 3, Javascript, NodeJS, ReactJS, Kotlin</li>
-										<li>Platform: Unreal Engine 4, Unity, Git, Perforce, Android Studio</li>
+										<li>Langages: C++/C#, Java, SQL, PHP, HTML 5, CSS 3, Javascript, NodeJS, ReactJS, Kotlin</li>
+										<li>Plateforme: Unreal Engine 4, Unity, Git, Perforce, Android Studio</li>
 										<li>Certifications: Azure Fundamentals (AZ-900)</li>
-										<li>Others: Agile/Kanban Methods</li>
+										<li>Autres: Agile/Kanban Methods</li>
 									</ul>
 									<hr />
-									<h4>Work Experiences</h4>
+									<h4>Expériences Professionnelles</h4>
 									<ul>
-										<li>Mobile App Developper - Bi Expertise
-											<p> May 2021 - August 2021 and August 2022-Now <br>
-												-Explore solutions to conceptualize 3D models using photogrammetry<br>
-												-Search for new technologies and useful concepts for the projet at hand<br>
-												-Stay up to date with new technologies and learn new skills about Azure Essentials and Blender<br>
-												-Collaborate with other programmers, analyse constraints and suggest appropriate concepts for different features<br>
+										<li>Développeur d'application mobile - Bi Expertise
+											<p> Mai 2021 - Août 2021 et Août 2022-Maintenant <br>
+												- Explorer des solutions pour conceptualiser des modèles 3D à l'aide de la photogrammétrie<br>
+												- Recherche de nouvelles technologies et de concepts utiles pour le projet en question<br>
+												- Restez à jour avec les nouvelles technologies et apprenez de nouvelles compétences sur Azure Essentials et Blender<br>
+												- Collaborer avec d'autres programmeurs, analyser les contraintes et suggérer des concepts appropriés pour différentes caractéristiques<br>
 											</p>
 										</li>
-										<li>Student Staff - Beneva
-											<p>March 2020 - August 2020 <br>
-												-Analyze existing features and, if need be, define new solutions to the needs of systems<br>
-												-Automate the Beneva's mobile app build with GitHub Actions<br>											</p>
+										<li>Employé étudiant - Beneva
+											<p>Mars 2020 - Août 2020 <br>
+												- Analyser les caractéristiques existantes et, le cas échéant, définir de nouvelles solutions aux besoins des systèmes<br>
+												- Automatiser la création de l'application mobile de Beneva avec les actions GitHub<br>
+											</p>
 										</li>
-										<li>Internship - Beneva
-											<p>May 2019 - August 2019 <br>
-												-Automating of interface testing on mobile app<br>
-												-Developping a web site to spread the use of tests by others developpers<br>
-												-Research for new technologies and sofware to adapt the tests on both Android and IOS<br>
+										<li>Stagiaire - Beneva
+											<p>Mai 2019 - Août 2019 <br>
+												- Automatisation des tests d'interface sur l'application mobile<br>
+												- Création d'un site Web pour diffuser l'utilisation des tests par d'autres développeurs<br>
+												- Recherche de nouvelles technologies et de logiciels pour adapter les tests sur Android et IOS<br>
 											</p>
 										</li>
 									</ul>
 									<hr />
 									<h4>Distinctions</h4>
 									<ul>
-										<li>2 Excellence scholarship of UQAC Foundation (2020, 2022)</li>
-										<li>Third prize at HackQC 2019 (Create an app to identify nearby electric car charging stations and the touristic attractions near them)</li>
-										<li>Scholarship of Glendon University for an English immersion (Explore program), Toronto</li>
+										<li>2 Bourse d'excellence de la Fondation UQAC (2020, 2022)</li>
+										<li>Troisième prix au HackQC 2019 (créer une application pour identifier les stations de recharge des voitures électriques à proximité et les attractions touristiques à proximité d'elles)</li>
+										<li>Bourse de l'Université Glendon pour une immersion anglaise (programme Explorer), Toronto</li>
 									</ul>
 									<hr />
-									<h4>Languages</h4>
+									<h4>Langues</h4>
 									<ul>
-										<li>French and English (Spoken, Read, Written)</li>
+										<li>Français et anglais (parlé, lire, écrit)</li>
 									</ul>
 									<hr />
 								</section>
