--- a/fr/index.html
+++ b/fr/index.html
@@ -129,7 +129,7 @@
 								</p>
 							</li>
 							<li class="icon solid fa-laptop-code">
-								<h3>Competences</h3>
+								<h3>Compétences</h3>
 								<p>Langages: C++/C# <br><br>
 									Plateforme: Unreal Engine 4, Unity, Git, Perforce <br><br>
 								</p>
