languages switch buttons

--- a/fr/howDoYouLikeThemApples.html
+++ b/fr/howDoYouLikeThemApples.html
@@ -75,6 +75,10 @@
 						<li><a href="https://gitlab.com/AntonyMenard604" class="icon brands fa-gitlab"><span class="label">GitLab</span></a></li>
 						<li><a href="mailto:antonymenard@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
+					<ul class="languages">
+						<a href="../howDoYouLikeThemApples.html">En</a>
+						<a href="howDoYouLikeThemApples.html">Fr</a>
+					</ul>
 					<ul class="copyright">
 						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
