--- a/fr/index.html
+++ b/fr/index.html
@@ -164,6 +164,10 @@
 						<li><a href="https://gitlab.com/AntonyMenard604" class="icon brands fa-gitlab"><span class="label">GitLab</span></a></li>
 						<li><a href="mailto:antonymenard@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
+					<ul class="languages">
+						<a href="../index.html">En</a>
+						<a href="index.html">Fr</a>
+					</ul>
 					<ul class="copyright">
 						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
