add links in main page

--- a/fr/index.html
+++ b/fr/index.html
@@ -67,7 +67,7 @@
 				<section id="two" class="wrapper alt style2">
 					<section class="spotlight">
 						<div class="image"><img src="../images/up_we_go.png" alt="" /></div><div class="content">
-							<h2>Up We Go</h2>
+							<h2><a href="fr/upWeGo.html">Up We Go</a></h2>
 							<p>Un jeu de plateforme 3D que vous pouvez jouer en ligne avec jusqu'à 8 joueurs. 
 								Agripper et roulez dans  le niveau pour atteindre l'arbre géant.<br>
 							</p>
@@ -75,33 +75,33 @@
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="../images/echo.jpg" alt="" /></div><div class="content">
-							<h2>Echo</h2>
+							<h2><a href="fr/echo.html">Echo</a></h2>
 							<p>Un jeu narratif avec un peu de furtivité fait dans une équipe multidisciplinaire. 
 								Ce jeu sérieux vous apprend le concept d'une chambre d'écho</p>
 						</div>
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="../images/be_bold.jpg" alt="" /></div><div class="content">
-							<h2>Be Bold!</h2>
+							<h2><a href="fr/beBold.html">Be Bold!</a></h2>
 							<p>Auto-runner avec un esthétique synth-wave. Sauter et tirer pour compléter les niveaux</p>
 						</div>
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="../images/coming_soon.jpg" alt="" /></div><div class="content">
-							<h2>How Do You Like Them Apples (Ongoing)</h2>
+							<h2><a href="fr/howDoYouLikeThemApples.html">How Do You Like Them Apples (Ongoing)</a></h2>
 							<p>Un projet personnel sous la forme d'un Rogue-Doom-like. Un match entre les mouvements des personnages 
 								de Doom Eternal et la boucle de jeu de RoboQuest.</p>
 						</div>
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="../images/resistance_is_futile.png" alt="" /></div><div class="content">
-							<h2>Resistance is futile</h2>
+							<h2><a href="fr/resistanceIsFutile.html">Resistance is futile</a></h2>
 							<p>Un tour par tour avec une mécanique rpg. Combattre et piller les ennemis jusqu'à ce que mort s'en suive</p>
 						</div>
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="../images/excess_mana.png" alt="" /></div><div class="content">
-							<h2>Excess Mana</h2>
+							<h2><a href="fr/excessMana.html">Excess Mana</a></h2>
 							<p>Un tower-defense avec vu du dessus avec un peu d'exploration. 
 								Passez d'un pouvoir élémentaire à l'autre pour lutter contre les slimes</p>
 						</div>
