--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				<section id="two" class="wrapper alt style2">
 					<section class="spotlight">
 						<div class="image"><img src="images/up_we_go.png" alt="" /></div><div class="content">
-							<h2>Up We Go</h2>
+							<h2><a href="upWeGo.html">Up We Go</a></h2>
 							<p>A 3D platformer that you can play online with up to 8 players.
 								Grab and roll your way through the level to reach the giant tree.<br>
 							</p>
@@ -76,33 +76,33 @@
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="images/echo.jpg" alt="" /></div><div class="content">
-							<h2>Echo</h2>
+							<h2><a href="echo.html">Echo</a></h2>
 							<p>A narrative driven-game with a bit of stealth made in a multidisciplinary team.
 									This serious game teaches you about the concept of an echo chamber</p>
 						</div>
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="images/be_bold.jpg" alt="" /></div><div class="content">
-							<h2>Be Bold!</h2>
+							<h2><a href="beBold.html">Be Bold!</a></h2>
 							<p>An auto-runner with a synthwave esthetic. Jump and shoot to complete the levels</p>
 						</div>
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="images/coming_soon.jpg" alt="" /></div><div class="content">
-							<h2>How Do You Like Them Apples (Ongoing)</h2>
+							<h2><a href="howDoYouLikeThemApples.html">How Do You Like Them Apples (Ongoing)</a></h2>
 							<p>A personnal project in the form of a Rogue-Doom-like. 
 								A match up between Doom Eternal's character movements and RoboQuest's game loop. </p>
 						</div>
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="images/resistance_is_futile.png" alt="" /></div><div class="content">
-							<h2>Resistance is futile</h2>
+							<h2><a href="resistanceIsFutile.html">Resistance is futile</a></h2>
 							<p>A turn-by-turn game with rpg mechanics. Fight and loot enemies until death</p>
 						</div>
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="images/excess_mana.png" alt="" /></div><div class="content">
-							<h2>Excess Mana</h2>
+							<h2><a href="excessMana.html">Excess Mana</a></h2>
 							<p>A top-down tower-defense with a bit of exploration. 
 								Switch between elemental powers to fights slimes</p>
 						</div>
