trad be bold/echo

--- a/fr/beBold.html
+++ b/fr/beBold.html
@@ -62,13 +62,14 @@
 
 								<h3>Development</h3>
 								<p>
-									I worked on this game has a Synthesis projet for my College Degree. In a team of three, we thought 
-									of a game concept and developed it in 15 weeks, divided in conception phase, and bronze, silver 
-									and gold phase. We followed Agile methods and practised SCRUM meetings daily. We also made 
-									weekly review of the game's progress to talk about what went wrong and what was done right. 
-									In addition to our teacher reviewing our work, mentors from the game industry came on several 
-									occasions to give advices development and gameplay-wise. A friend of mine joined the team near
-									the end to create the incredible music of the game.
+									J'ai travaillé sur ce jeu a un projet de synthèse pour mon diplôme universitaire. Dans une équipe de 
+									trois, nous pensions d'un concept de jeu et l'a développé en 15 semaines, divisé en phase de 
+									conception, et bronze, argent et la phase aurifère. Nous avons suivi les méthodes Agiles et pratiqué 
+									les réunions du SCRUM tous les jours. Nous avons également fait examen hebdomadaire des progrès du jeu 
+									pour parler de ce qui n'a pas fonctionné et de ce qui a été fait correctement. En plus de notre 
+									professeur qui a passé en revue notre travail, les mentors de l'industrie du jeu ont reçu plusieurs 
+									des occasions de donner des conseils au développement et au gameplay. Un de mes amis s'est joint à 
+									l'équipe à proximité la fin de la création de la musique incroyable du jeu.
 								</p>
 
 							</div>
