--- a/fr/echo.html
+++ b/fr/echo.html
@@ -59,13 +59,14 @@
 
 								<h3>Development</h3>
 								<p>
-									This is an interesting project was done with a multidisciplinary team composed of programmers and
-									artists (2D, 3D and musicians) while I was at university. After picking a serious subject to make a game, 
-									which ended up being the concept of echo chamber, we tested 3 game designs to see which one
-									conveyed the message the best, the best one being a narative-driven game that ended up being Echo. 
-									It was very interesting to see how the two professions saw the project in completly 
-									different ways. We made two weekly meetings to keep track of what was being done by each one and 
-									had game designer from Ubisoft Saguenay look at our concepts to help us.
+									Il s'agit d'un projet intéressant réalisé avec une équipe multidisciplinaire composée de programmeurs 
+									et artistes (2D, 3D et musiciens) alors que j'étais à l'université. Après avoir choisi un sujet sérieux 
+									pour faire un jeu, soit le concept de chambre d'écho, nous avons fait la conceptions de 3 prototypes de
+									jeu pour voir lequel a transmis le message le mieux, le meilleur étant un jeu naratif qui a fini par 
+									être Echo. Il était très intéressant de voir comment les deux professions ont vu le projet en fin de 
+									compte. différentes manières. Nous avons organisé deux réunions hebdomadaires pour suivre ce qui était 
+									fait par chacune d'elles et j'ai demandé au concepteur de jeux d'Ubisoft Saguenay d'examiner nos 
+									concepts pour nous aider.
 								</p>
 
 							</div>
