--- a/excessMana.html
+++ b/excessMana.html
@@ -60,7 +60,11 @@
 
 								<h3>Development</h3>
 								<p>
-									this is a Development
+									This is the first game done during a game-jam, therefore some mistakes were made. We planned the 
+									game loop and aimed a bit too high for the scope of a game-jam. We changed how systems worked too 
+									late and wasted a lot of time trying to fix it. And because we didn't have artists, we had to 
+									spend half our working force to do the visuals and sounds. The result is not great, but the 
+									experience was worth it.
 								</p>
 
 							</div>
