--- a/upWeGo.html
+++ b/upWeGo.html
@@ -60,7 +60,8 @@
 
 								<h3>Development</h3>
 								<p>
-									this is a Development
+									As the synthesis project for my Bachelor's degree. The game was planned and created during a 
+									session of 16 weeks.
 								</p>
 
 							</div>
