--- a/resistanceIsFutile.html
+++ b/resistanceIsFutile.html
@@ -53,14 +53,18 @@
 
 								<h3>Gameplay</h3>
 								<p>
-									This is a game
+									Enemies arrives in waves of three. Loot and fight for as long as possible, but in the end, resistance is 
+									futile.
 								</p>
 
 								<hr />
 
 								<h3>Development</h3>
 								<p>
-									this is a Development
+									The development of this game was made during a game-jam. We over-shot the scope of the game and 
+									created systems that were not really useful/fun, like the equipment system. Due to a communication 
+									mistake, the combat system was reworked when it was not necessary. We learned a lot during this 
+									game-jam and understood more how we should have organised the team.
 								</p>
 
 							</div>
