english pages done

--- a/echo.html
+++ b/echo.html
@@ -52,7 +52,8 @@
 
 								<h3>Gameplay</h3>
 								<p>
-									This is a game
+									In an unknown environment, you must escape without being seen. Fortunalty, you have peoples 
+									to help you. But they are not saying the same things. Who will you trust?
 								</p>
 
 								<hr />
