--- a/excessMana.html
+++ b/excessMana.html
@@ -52,7 +52,9 @@
 
 								<h3>Gameplay</h3>
 								<p>
-									This is a game
+									You are a great wizard (in the making)! Explore the land during the day to collect runes to 
+									build defensive towers, because at night, you must protect your magic altar and survive to tell the 
+									tale.
 								</p>
 
 								<hr />
