--- a/howDoYouLikeThemApples.html
+++ b/howDoYouLikeThemApples.html
@@ -52,14 +52,19 @@
 
 								<h3>Gameplay</h3>
 								<p>
-									This is a game
+									The game is not yet finished, but the end game is to have a 
+									<a href="https://bethesda.net/en/game/doom">Doom Eternal</a>-like gameplay with a level design 
+									inspired by a rogue-like approch like <a href="https://www.roboquest.com/">RoboQuest</a>
 								</p>
 
 								<hr />
 
 								<h3>Development</h3>
 								<p>
-									this is a Development
+									The game is my current personal project. The character's movement is the first to come. than a basic 
+									apple throwing mechanic, followed by some enemies to be able to play a bit in a level. Some 3D assets 
+									were bought to speed up the development and be somewhat more pleasing to the eyes.
+
 								</p>
 
 							</div>
